# spacewire

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
SF/: animate.py  iface.py  metrics.json  pack.py  packet.py  plot.py  receiver.py  simpleproto.lua  spacefibre.lua  spacefibre_metrics.json  spacefibre_qos_metrics.json  spacewire.lua  spacewire_metrics.json  topology.py
spacewire/: __init__.py  cli.py  config.py  gui.py  logging_config.py  metrics.py  packet.py  topology.py
spacewire/config/: default.yaml
tests/: test_metrics.py  test_packet.py  test_topology.py
